--- a/tickets.html
+++ b/tickets.html
@@ -121,28 +121,38 @@
 			<br />
 			<h2 class="headers"><a href="https://www.eventbrite.com/e/jigs-up-blugold-ice-fishing-contest-on-lake-wissota-tickets-28840941031">Register Here!</a></h2>
 			<h4 class="headers">Fish Tickets:</h4>
-			<h4>$25, one ticket required for each fish registered, mutiple tickets may be purchased </h4>
+			<h4>$25, one ticket required for each fish registered, multiple tickets may be purchased </h4>
 			<blockquote>
 				Over $80,000 in cash and prizes including a 2017 Ice Castle Scout, win a Ford F150 Truck if you catch and register the tagged fish!  Prizes awarded to the top 25 fish by weight and every 5th place thereafter to the 300th place so even a small fish can win big! All prizes will be distributed at the event, regardless
 				of the number of fish registered.
 			</blockquote>
 
+			<ul class="list">
+				<li>Prizes awarded to the top 25 fish by weight and every 5th place thereafter to the 300th place so even a small fish can win big! If 300 fish are not registered, the remaining prizes will be drawn from all registered Fish Tickets.</li>
+
+				<li>Everyone who registers a fish will receive two free Blugold Football Tickets (value $16).</li>
+
+				<li> $100 gift cards will be given to the top fish by species: Northern, Walleye and Pan Fish.</li>
+
+				<li> “The One that Got Away” drawing from all Fish Ticket holders that did not register a fish. Turn in Fish Ticket stub at the Prize Table at The View by 2:30pm.</li>
+			</ul>
+
 			<h4 class="headers">Fish Ticket Availability:</h4>
-			<h4>Tickets available online until 10:00pm on Friday, February 10th. Fish tickets will be available on February 11th, 2017: at the Weigh-in Stations and The View until 9am for $40. </h4>
+			<h4>Tickets available online until 10:00pm on Friday, February 10th. Fish tickets will be available on February 11th, 2017: at the Weigh-in Stations 9am for $40. </h4>
 			<blockquote>
-				Fish tickets purchased online will be mailed through February 2nd to the address indicated. After February 2nd, tickets will be available for pick-up at the weigh-in station in The View.
-				NOTE: You do not need to pick up your fish tickets until you are ready to weigh-in a fish.
+				Fish tickets purchased online will be mailed through February 3rd to the address indicated. After February 3rd, tickets will be available for pick-up at the weigh-in station in The View.
+				NOTE: You do not need to pick up your fish tickets until you are ready to weigh in a fish.
 
 			</blockquote>
 
 			<h4 class="headers">Raffle Tickets:</h4>
 			<h4><b>$5 each or 5 for $20</b></h4>
 			<blockquote>
-				$7,500 in prizes includes a 2016 Polaris Sportsman 4-wheeler, Vexilar Fish Sonar, Benelli Shotgun, and more.  Tickets can be purchased up until 2:30 PM on Saturday, February 11th at The View and the weigh-in stations.
+				$7,500 in prizes includes a 2016 Polaris Sportsman 4-wheeler, Vexilar Fish Sonar, Benelli Shotgun, and more.  Tickets can be purchased up until 2:30pm on Saturday, February 11th at the weigh-in stations.
 
 				<br />
 				<br /> Raffle tickets purchased online will have the stubs completed by contest administrators and entered into the drawing. Claim tickets will be mailed through February 3rd to the address indicated.  After February 3rd, claim tickets will be available for
-				pick-up at The View on Lake Wissota. NOTE: Raffle drawing begins at 3:00 PM at The View. Please pick up claim tickets by 2:00 PM.
+				pick-up at the weigh-in station in The View. NOTE: Raffle drawing begins at 3:00pm at The View. Please pick up claim tickets by 2:00pm.
 			</blockquote>
 
 
@@ -157,13 +167,12 @@
 					<li>Scheels until 9pm Friday, February 10th</li>
 					<li>The View at Lake Wissota</li>
 					<li>The Edge Pub &amp; Eatery on Lake Wissota</li>
-					<li>Gordy’s Market select locations* until 10pm Friday, February 10th</li>
-					<li>UWEC McPhee Information Office, 8:00am-4:30pm, Monday - Friday</h3>
-					</li>
-					<li>UWEC Hilltop Recreation Center Office, 8:00am-4:30pm, Monday - Friday</h3>
-					</li>
+					<li>Gordy’s Market select locations* until 10:00pm Friday, February 10th</li>
+					<li>UWEC Recreation </h3></li>
 				</ul>
-				*Gordy’s Market Store Locations:  Lake Wissota, Downtown Chippewa Falls, Chippewa Commons, Birch Street (EC), Hamilton (EC), Clairemont (EC), Rice Lake, Ladysmith, Cornell, Chetek
+				*Gordy’s Market Store Locations for Fish and Raffle Tickets: Lake Wissota, Downtown Chippewa Falls, Chippewa Commons, Birch Street (EC),
+				 Hamilton (EC), Clairemont (EC), Gordy’s West. Fish tickets only available at: Arcadia, Augusta, Barron, Black River Falls, Cornell, Chetek,
+				  Hayward, Ladysmith, Neillsville, Osseo, Rice Lake, Shell Lake, Spencer, Stanley, Whitehall
 			</div>
 	</section>
 
