--- a/directions.html
+++ b/directions.html
@@ -64,9 +64,6 @@
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav">
 					<li class="sliding-middle-out"><a href="index.html">Home</a></li>
-					<li class="sliding-middle-out"><a href="contact.html">Contact</a></li>
-					<li class="sliding-middle-out"><a href="sponsors.html">Sponsors</a></li>
-					<li class="sliding-middle-out"><a href="prizes.html">Prizes</a></li>
 					<li class="dropdown">
 						<a class="dropdown-toggle navcol" data-toggle="dropdown" href="#">Event<span class="caret"></span></a>
 						<ul class="dropdown-menu">
@@ -83,7 +80,10 @@
 							<li><a href="assets/rules2017.pdf" target="_blank">Rules</a></li>
 						</ul>
 					</li>
+					<li class="sliding-middle-out"><a href="prizes.html">Prizes</a></li>
 					<li class="sliding-middle-out"><a href="tickets.html">Tickets</a></li>
+					<li class="sliding-middle-out"><a href="contact.html">Contact</a></li>
+					<li class="sliding-middle-out"><a href="sponsors.html">Sponsors</a></li>
 					<li class="social-media">
 						<a target="_blank" class="fbook" href="https://www.facebook.com/pages/The-Jigs-Up-Ice-Fishing-Contest/736663866412522">
 							<img alt="Facebook Logo" src="images/facebook.png" class="fbook" </img>
@@ -197,21 +197,19 @@
 <footer>
 	<div class="footer hidden-xs">
 		<div class="sponsorBar">
+			<a href="http://www.scheels.com" target="_blank"><img class="sponsorBarImg" src="images\sponsors\scheelsLarge.png" alt="Scheels"></a>
 			<a href="http://www.subway.com/subwayroot/default.aspx" target="_blank"><img class="sponsorBarImg" src="images\sponsors\Subway.png" alt="Subway"></a>
 			<a href="http://www.gordyscountymarket.net" target="_blank"><img class="sponsorBarImg" src="images\sponsors\gordysLarge.png" alt="Gordy's County Market"></a>
-			<a href="http://www.scheels.com" target="_blank"><img class="sponsorBarImg" src="images\sponsors\scheelsLarge.png" alt="Scheels"></a>
 			<a href="http://www.geteskimo.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\eskimo.png" alt="Eskimo Ice Fishing Gear"></a>
 			<a href="http://www.leinie.com" target="_blank"><img class="sponsorBarImg" src="images\sponsors\lein.png" alt="Leinenkugel's"> </a>
 			<a href="http://www.prestigervauto.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\prestige.png" alt="Presitge Auto Corportation"></a>
-
 			<a href="http://www.uwec.edu/dining/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\dining.png" alt="Blugold Dining by Sodexo">
-			<a href="http://www.eauclaireford.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\ford.png" alt="Ford"></a>
-			<a href="http://www.theedgepubandeatery.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\edge.png" alt="Ford"></a>
-			<a href="https://www.facebook.com/wissota.view.5" target="_blank"><img class="sponsorBarImg" src="images\sponsors\view.png" alt="Ford"></a>
-			<a href="http://www.gollonbait.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\gollon.png" alt="Gollon Brothers"></a>
-			<a href="http://www.xtrememotorsportsllc.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\XTREME MOTORSPORTS_2C_DIGITAL BLUE.png" alt="Xtreme Motorsports, LLCXtreme Motorsports, LLC"></a>
-			<a href="https://mydynamicfitness.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\Dynamic-Logo-OnWhite.png" alt="Dynamic Fitness and Strength"></a>
-
+				<a href="http://www.theedgepubandeatery.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\edge.png" alt="The Edge Pub and Eatery"></a>
+				<a href="https://www.facebook.com/wissota.view.5" target="_blank"><img class="sponsorBarImg" src="images\sponsors\view.png" alt="The View"></a>
+				<a href="http://www.gollonbait.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\gollon.png" alt="Gollon Brothers"></a>
+				<a href="http://www.xtrememotorsportsllc.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\XTREME MOTORSPORTS_2C_DIGITAL BLUE.png" alt="Xtreme Motorsports, LLCXtreme Motorsports, LLC"></a>
+				<a href="https://mydynamicfitness.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\Dynamic-Logo-OnWhite.png" alt="Dynamic Fitness and Strength"></a>
+				<a href="http://www.eauclaireford.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\ford.png" alt="Ford"></a>
 		</div>
 		<p>
 			Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
@@ -220,20 +218,19 @@
 	<div class="footer visible-xs">
 		<p class="small-footer">
 			<div class="sponsorBar">
+				<a href="http://www.scheels.com" target="_blank"><img class="sponsorBarImg" src="images\sponsors\scheelsLarge.png" alt="Scheels"></a>
 				<a href="http://www.subway.com/subwayroot/default.aspx" target="_blank"><img class="sponsorBarImg" src="images\sponsors\Subway.png" alt="Subway"></a>
 				<a href="http://www.gordyscountymarket.net" target="_blank"><img class="sponsorBarImg" src="images\sponsors\gordysLarge.png" alt="Gordy's County Market"></a>
-				<a href="http://www.scheels.com" target="_blank"><img class="sponsorBarImg" src="images\sponsors\scheelsLarge.png" alt="Scheels"></a>
 				<a href="http://www.geteskimo.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\eskimo.png" alt="Eskimo Ice Fishing Gear"></a>
 				<a href="http://www.leinie.com" target="_blank"><img class="sponsorBarImg" src="images\sponsors\lein.png" alt="Leinenkugel's"> </a>
 				<a href="http://www.prestigervauto.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\prestige.png" alt="Presitge Auto Corportation"></a>
-
 				<a href="http://www.uwec.edu/dining/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\dining.png" alt="Blugold Dining by Sodexo">
-				<a href="http://www.eauclaireford.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\ford.png" alt="Ford"></a>
-				<a href="http://www.theedgepubandeatery.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\edge.png" alt="Ford"></a>
-				<a href="https://www.facebook.com/wissota.view.5" target="_blank"><img class="sponsorBarImg" src="images\sponsors\view.png" alt="Ford"></a>
-				<a href="http://www.gollonbait.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\gollon.png" alt="Gollon Brothers"></a>
-				<a href="http://www.xtrememotorsportsllc.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\XTREME MOTORSPORTS_2C_DIGITAL BLUE.png" alt="Xtreme Motorsports, LLCXtreme Motorsports, LLC"></a>
-				<a href="https://mydynamicfitness.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\Dynamic-Logo-OnWhite.png" alt="Dynamic Fitness and Strength"></a>
+					<a href="http://www.theedgepubandeatery.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\edge.png" alt="The Edge Pub and Eatery"></a>
+					<a href="https://www.facebook.com/wissota.view.5" target="_blank"><img class="sponsorBarImg" src="images\sponsors\view.png" alt="The View"></a>
+					<a href="http://www.gollonbait.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\gollon.png" alt="Gollon Brothers"></a>
+					<a href="http://www.xtrememotorsportsllc.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\XTREME MOTORSPORTS_2C_DIGITAL BLUE.png" alt="Xtreme Motorsports, LLCXtreme Motorsports, LLC"></a>
+					<a href="https://mydynamicfitness.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\Dynamic-Logo-OnWhite.png" alt="Dynamic Fitness and Strength"></a>
+					<a href="http://www.eauclaireford.com/" target="_blank"><img class="sponsorBarImg" src="images\sponsors\ford.png" alt="Ford"></a>
 
 			</div>
 			Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
