--- a/index.html
+++ b/index.html
@@ -62,9 +62,6 @@
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav">
 					<li class="sliding-middle-out"><a href="index.html">Home</a></li>
-					<li class="sliding-middle-out"><a href="contact.html">Contact</a></li>
-					<li class="sliding-middle-out"><a href="sponsors.html">Sponsors</a></li>
-					<li class="sliding-middle-out"><a href="prizes.html">Prizes</a></li>
 					<li class="dropdown">
 						<a class="dropdown-toggle navcol" data-toggle="dropdown" href="#">Event<span class="caret"></span></a>
 						<ul class="dropdown-menu">
@@ -81,7 +78,11 @@
 							<li><a href="assets/rules2017.pdf" target="_blank">Rules</a></li>
 						</ul>
 					</li>
+					<li class="sliding-middle-out"><a href="prizes.html">Prizes</a></li>
 					<li class="sliding-middle-out"><a href="tickets.html">Tickets</a></li>
+					<li class="sliding-middle-out"><a href="contact.html">Contact</a></li>
+					<li class="sliding-middle-out"><a href="sponsors.html">Sponsors</a></li>
+
 					<li class="social-media">
 						<a target="_blank" class="fbook" href="https://www.facebook.com/pages/The-Jigs-Up-Ice-Fishing-Contest/736663866412522">
 							<img alt="Facebook Logo" src="images/facebook.png" class="fbook" </img>
@@ -124,19 +125,21 @@
                    <div class="item active">
                        <img src="images/slider/slide3.png" alt="First slide">
                        <div class="carousel-caption">
-												 <h3 class="headers"> Like us on Facebook </h3>
+												 <div class="col-md-12 text-center">
+												 <h6 class="headers"> Like us on Facebook </h6>
                        </div>
+											 </div>
                    </div>
                    <div class="item">
                        <img src="images/slider/slide2.png" alt="Second slide">
                        <div class="carousel-caption">
-												  
+
                        </div>
                    </div>
                    <div class="item">
                        <img src="images/slider/slide1.png" alt="Third slide">
                        <div class="carousel-caption">
-												  <h3 class="headers"> Like us on Facebook </h3>
+												  <h6 class="headers"> Like us on Facebook </h6>
                        </div>
                    </div>
                </div>
@@ -145,7 +148,22 @@
                        href="#carousel-example-generic" data-slide="next"><span class="glyphicon glyphicon-chevron-right">
                        </span></a>
            </div>
-</div>
+				
+
+					 <div class="sponsors">
+           <a href="http://www.gordyscountymarket.net" target="_blank">
+             <img class="indexTitleSponsor" src="images\sponsors\gordysLarge.png" alt="Gordy's County Market">
+
+ </a>
+           <a href="http://www.scheels.com" target="_blank">
+             <img class="indexTitleSponsor" src="images\sponsors\scheelsLarge.png" alt="Scheels">
+           </a>
+        <a href="http://www.subway.com/subwayroot/default.aspx" target="_blank">
+<img class="indexTitleSponsor" src="images\sponsors\Subway.png" alt="Subway">
+</a>
+         </div>
+
+				 	</div>
        </div>
    </div>
 
