--- a/pastResults.html
+++ b/pastResults.html
@@ -15,6 +15,7 @@
 	<link href="css/custom.css" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet" type="text/css">
 	<script src="js/lib/modernizr-2.6.2.min.js" type="text/javascript"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
 
 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -158,7 +159,7 @@
 <!-- new -->
 
 				<div class="panel panel-default">
-          <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">
+          <a data-toggle="collapse" data-parent="#accordion" href="#collapse0">
             <div class="panel-heading">
               <h4 class="panel-title">
                 2017
@@ -166,7 +167,7 @@
               <span class="glyphicon glyphicon-chevron-down expand-arrow"></span>
             </div>
 					</a>
-					<div id="collapse1" class="panel-collapse collapse ">
+					<div id="collapse0" class="panel-collapse collapse ">
 						<div class="panel-body">
 
 								<div class="row">
@@ -184,88 +185,10 @@
 													</tr>
 												</thead>
 												<tbody>
-											<tr><td>1</td><td>Tianna Ohren</td><td>9.939</td><td>Northern</td><td>*$1,000 Cash</td></tr>
-										 <tr><td>2</td><td>Dustin Quilling</td><td>9.121</td><td>Northern</td><td>8-in Ion Ice Auger w/ Reverse</td></tr>
-										 <tr><td>3</td><td>Bill Brummond</td><td>9.048</td><td>Northern</td><td>Eskimo QuickFlip Two-Man Shelter</td></tr>
-										 <tr><td>4</td><td>Jennifer Koestler</td><td>8.135</td><td>Northern</td><td>Radar Backwoods Camo Hunting Blind</td></tr>
-										 <tr><td>5</td><td>Matt Prosek</td><td>7.903</td><td>Northern</td><td>Eskimo FatFish 949 Ice Shack</td></tr>
-										 <tr><td>6</td><td>Jeremy Kurkowski</td><td>6.59</td><td>Walleye</td><td>Eskimo High Compression 8-in Propane Ice Auger</td></tr>
-										 <tr><td>7</td><td>Dave Davenport</td><td>5.525</td><td>Northern</td><td>River's Edge Big Foot XL Classic Hang-On Stand</td></tr>
-										 <tr><td>8</td><td>Jim Barnett</td><td>5.067</td><td>Northern</td><td>Moultrie A-20 Game Camera</td></tr>
-										 <tr><td>9</td><td>Andrew Hendrickson</td><td>4.884</td><td>Northern</td><td>HT Tip-Up/Rod Tote (Tip-Up Included)</td></tr>
-										 <tr><td>10</td><td>Kiana Smith</td><td>4.659</td><td>Northern</td><td>Vexilar FL-8SE Genz Pack Fish Sonar</td></tr>
-										 <tr><td>11</td><td>Connor Gordon</td><td>4.579</td><td>Northern</td><td>IFISH PRO TIP UP</td></tr>
-										 <tr><td>12</td><td>C.J. Thurner</td><td>3.987</td><td>Northern</td><td>Eskimo 43cc 10-in Mako Ice Auger</td></tr>
-										 <tr><td>13</td><td>Dave Mayer</td><td>3.968</td><td>Northern</td><td>Wildgame Innovations Handheld Card Viewer Trail Pad</td></tr>
-										 <tr><td>14</td><td>Shawn Larson</td><td>3.962</td><td>Northern</td><td>Beaver Dam Bucket</td></tr>
-										 <tr><td>15</td><td>Leo Kurkowski</td><td>3.885</td><td>Northern</td><td>Garmin eTrex10 GPS</td></tr>
-										 <tr><td>16</td><td>Quint Krueger</td><td>3.83</td><td>Northern</td><td>Uncle Josh Original Beaver Dam Tip Up</td></tr>
-										 <tr><td>17</td><td>Josh Monk</td><td>3.796</td><td>Northern</td><td>Rapala Electric Fillet Knife</td></tr>
-										 <tr><td>18</td><td>Bill Pooler</td><td>3.722</td><td>Northern</td><td>Eskimo QuickFlip Two-Man Shelter</td></tr>
-										 <tr><td>19</td><td>Mitch Bogumill</td><td>3.692</td><td>Northern</td><td>Ice Armor Gloves</td></tr>
-										 <tr><td>20</td><td>Nancy Kurkowski</td><td>3.682</td><td>Northern</td><td>HT Rod Locker w/ Tip Up and Jig Poles</td></tr>
-										 <tr><td>21</td><td>Tim Raap</td><td>3.623</td><td>Northern</td><td>Ice Armor Parka</td></tr>
-										 <tr><td>22</td><td>Derek Post</td><td>3.559</td><td>Northern</td><td>HT Tip-Up/Rod Tote (Tip-Up Included)</td></tr>
-										 <tr><td>23</td><td>Jon Zierden</td><td>3.513</td><td>Northern</td><td>Mr. Heater Propane Little Buddy</td></tr>
-										 <tr><td>24</td><td>David Leslie</td><td>3.491</td><td>Northern</td><td>Dangler</td></tr>
-										 <tr><td>25</td><td>Cullen Schmoldt</td><td>3.192</td><td>Northern</td><td>*$500 Cash</td></tr>
-										 <tr><td>30</td><td>Jake Taylor</td><td>3.004</td><td>Northern</td><td>Pflueger Trion Spinning Reel</td></tr>
-										 <tr><td>35</td><td>Steve Luther</td><td>2.856</td><td>Northern</td><td>Scheels Outfitters Rectangular Ice Combo Bag + Frabill Straight Line 101 Ice Reel</td></tr>
-										 <tr><td>40</td><td>Art Nyhus</td><td>2.619</td><td>Northern</td><td>River's Edge Classic Ladder Stand</td></tr>
-										 <tr><td>45</td><td>Jason Anderson</td><td>2.492</td><td>Walleye</td><td>Eskimo FatFish 949 Ice Shack</td></tr>
-										 <tr><td>50</td><td>Gregg Johnson</td><td>2.372</td><td>Northern</td><td>Jiffy Powerhead Ice Auger</td></tr>
-										 <tr><td>55</td><td>Dustin Killinger</td><td>2.245</td><td>Northern</td><td>Uncle Josh Original Beaver Dam Tip-Up</td></tr>
-										 <tr><td>60</td><td>Dave Janke</td><td>2.098</td><td>Northern</td><td>Scheels Gift Card + Genie Jar Large (Optimus)</td></tr>
-										 <tr><td>65</td><td>Josh Sedlacek</td><td>2.065</td><td>Northern</td><td>Frabill Straight Line 101 Ice Reel</td></tr>
-										 <tr><td>70</td><td>Josh Hartman</td><td>2.024</td><td>Northern</td><td>8-in Ion Ice Auger w/ Reverse</td></tr>
-										 <tr><td>75</td><td>Frank Goodman</td><td>1.921</td><td>Northern</td><td>Jaw Jacker</td></tr>
-										 <tr><td>80</td><td>Robert Lor</td><td>1.832</td><td>Bass</td><td>Scheels Outfitters Rectangular Ice Combo Bag + Scheels Gift Card</td></tr>
-										 <tr><td>85</td><td>Todd Adlemen</td><td>1.721</td><td>Northern</td><td>Eskimo QuickFlip One-Man Shelter</td></tr>
-										 <tr><td>90</td><td>Adam Beasterfield</td><td>1.633</td><td>Northern</td><td>Pro Classic Ice Fishing Combo</td></tr>
-										 <tr><td>95</td><td>Todd Rowan</td><td>1.517</td><td>Crappie</td><td>Ice Armor Gloves</td></tr>
-										 <tr><td>100</td><td>Joe Kurkowski</td><td>1.419</td><td>Northern</td><td>Eskimo 43cc 8-in Mako Ice Auger</td></tr>
-										 <tr><td>105</td><td>Justin Woolever</td><td>1.21</td><td>Crappie</td><td>SKINZ IT</td></tr>
-										 <tr><td>110</td><td>Jimmy Michalec</td><td>1.095</td><td>Crappie</td><td>Scheels Outfitters Rectangular Ice Combo Bag + Frabill Straight Line 101 Ice Reel</td></tr>
-										 <tr><td>115</td><td>Chris Spath</td><td>1.057</td><td>Crappie</td><td>Berkley Combo</td></tr>
-										 <tr><td>120</td><td>Derek Rubenzer</td><td>1.041</td><td>Crappie</td><td>Scheels Gift Card + Genie Jar Large (Optimus)</td></tr>
-										 <tr><td>125</td><td>Adam Morgan</td><td>1.03</td><td>Walleye</td><td>Ice Castle</td></tr>
-										 <tr><td>130</td><td>Paul Guntner</td><td>1.019</td><td>Crappie</td><td>Uncle Josh Original Beaver Dam Tip-Up</td></tr>
-										 <tr><td>135</td><td>Joshua Hayes</td><td>1.01</td><td>Crappie</td><td>Eskimo FatFish 949 Ice Shack</td></tr>
-										 <tr><td>140</td><td>Brad Frendel</td><td>0.988</td><td>crappie</td><td>Rivers Edge Big Foot XL Tree Stand</td></tr>
-										 <tr><td>145</td><td>Jule Moss</td><td>0.979</td><td>Crappie</td><td>Berkley Combo</td></tr>
-										 <tr><td>150</td><td>Matt Collum</td><td>0.97</td><td>Crappie</td><td>Eskimo FatFish 949 Ice Shack</td></tr>
-										 <tr><td>155</td><td>Chris Holmes</td><td>0.956</td><td>Crappie</td><td>Pro Classic Ice Fishing Combo</td></tr>
-										 <tr><td>160</td><td>Mike Grew</td><td>0.941</td><td>Crappie</td><td>Beaver Dam Thermal Tip Up</td></tr>
-										 <tr><td>165</td><td>Greg Halverson</td><td>0.929</td><td>Crappie</td><td>HT Tip-Up/Rod Tote (Tip-Up Included)</td></tr>
-										 <tr><td>170</td><td>Dan Walker</td><td>0.921</td><td>Crappie</td><td>Eskimo Hand Auger</td></tr>
-										 <tr><td>175</td><td>Andy Erickson</td><td>0.908</td><td>Crappie</td><td>Eskimo High Compression 8-in Propane Ice Auger</td></tr>
-										 <tr><td>180</td><td>John Hansen</td><td>0.902</td><td>Crappie</td><td>Eskimo QuickFlip One-Man-Shelter</td></tr>
-										 <tr><td>185</td><td>Wyatt Goetsch</td><td>0.892</td><td>Crappie</td><td>Scheels Gift Card + Genie Jar Large (Optimus)</td></tr>
-										 <tr><td>190</td><td>Bruce West</td><td>0.882</td><td>Crappie</td><td>Pro Classic Ice Fishing Combo</td></tr>
-										 <tr><td>195</td><td>Pat Delong</td><td>0.877</td><td>Crappie</td><td>Scheels Outfitters Rectangular Ice Combo Bag + Frabill Straight Line 101 Ice Reel</td></tr>
-										 <tr><td>200</td><td>Scott Roscoe</td><td>0.868</td><td>Crappie</td><td>Uncle Josh Original Beaver Dam Tip-Up</td></tr>
-										 <tr><td>205</td><td>Sean Lein</td><td>0.863</td><td>Crappie</td><td>Jaw Jacker</td></tr>
-										 <tr><td>210</td><td>Tyler Bowe</td><td>0.852</td><td>Crappie</td><td>Beaver Dam Thermal Tip Up</td></tr>
-										 <tr><td>215</td><td>Kesler Schuette</td><td>0.84</td><td>Crappie</td><td>HT Tip-Up/Rod Tote (Tip-Up Included)</td></tr>
-										 <tr><td>220</td><td>Rick Tumaniec</td><td>0.833</td><td>Walleye</td><td>Rivers Edge Big Foot XL Tree Stand</td></tr>
-										 <tr><td>225</td><td>Ben Goeman</td><td>0.827</td><td>Perch</td><td>Pflueger Trion Spinning Reel</td></tr>
-										 <tr><td>230</td><td>Shelly Buckli</td><td>0.821</td><td>Crappie</td><td>Wildgame Innovations Handheld Card Viewer Trail Pad</td></tr>
-										 <tr><td>235</td><td>Barret Neuhaus</td><td>0.81</td><td>Crappie</td><td>Eskimo High Compression 8-in Propane Ice Auger</td></tr>
-										 <tr><td>240</td><td>Dave Moss</td><td>0.802</td><td>Crappie</td><td>Mr. Heater Propane Little Buddy</td></tr>
-										 <tr><td>245</td><td>Nick Gjerstad</td><td>0.788</td><td>Crappie</td><td>Rapala Electric Fillet Knife</td></tr>
-										 <tr><td>250</td><td>Gary George</td><td>0.781</td><td>Crappie</td><td>Beaver Dam Bucket</td></tr>
-										 <tr><td>255</td><td>Jake Larson</td><td>0.773</td><td>Walleye</td><td>HT Tip-Up/Rod Tote (Tip-Up Included)</td></tr>
-										 <tr><td>260</td><td>Randy Lee</td><td>0.771</td><td>Walleye</td><td>Moultrie A-20 Game Camera</td></tr>
-										 <tr><td>265</td><td>Sabrina Oland</td><td>0.767</td><td>Crappie</td><td>River's Edge Classic Ladder Stand</td></tr>
-										 <tr><td>270</td><td>Rick Rubenzer</td><td>0.762</td><td>Crappie</td><td>HT Rod Locker w/ Tip Up and Jig Poles</td></tr>
-										 <tr><td>275</td><td>Matt Moore</td><td>0.752</td><td>Crappie</td><td>Pro Classic Ice Fishing Combo</td></tr>
-										 <tr><td>280</td><td>Steve Gessert</td><td>0.747</td><td>Walleye</td><td>Eskimo High Compression 8-in Propane Ice Auger</td></tr>
-										 <tr><td>285</td><td>Mark Thornton</td><td>0.743</td><td>Crappie</td><td>IFISH PRO TIP UP</td></tr>
-										 <tr><td>290</td><td>Derek Mower</td><td>0.734</td><td>Crappie</td><td>Vexilar FL-8SE Genz Pack Fish Sonar</td></tr>
-										 <tr><td>295</td><td>Josh Dupee</td><td>0.723</td><td>Crappie</td><td>Dangler</td></tr>
-										 <tr><td>300</td><td>Peter Gadke</td><td>0.716</td><td>Walleye</td><td>*$500 Cash</td></tr>
-										</tbody>
-									</table>
+													<tr><td>1</td><td>Tianna Ohren</td><td>9.939</td><td>Northern</td><td>*$1,000 Cash</td></tr>
+													<script src="js/tables/2017FishPrizeWinners.js"></script>
+												</tbody>
+											</table>
 										</div>
 										<!-- #table-responsive -->
 												</div>
