--- a/index.html
+++ b/index.html
@@ -125,19 +125,14 @@
 						</ol>
 						<div class="carousel-inner">
 							<div class="item active">
-								<img src="images/slider/slide5.jpeg" alt="First slide">
+								<img src="images/slider/slide1.jpeg" alt="First slide">
 								<div class="carousel-caption">
 								</div>
 							</div>
 							<div class="item">
-								<img src="images/slider/slide1.jpeg" alt="Second slide">
+								<img src="images/slider/slide2.jpeg" alt="Second slide">
 								<div class="carousel-caption">
 
-								</div>
-							</div>
-							<div class="item">
-								<img src="images/slider/slide6.jpeg" alt="Third slide">
-								<div class="carousel-caption">
 								</div>
 							</div>
 							<div class="item">
@@ -146,7 +141,12 @@
 								</div>
 							</div>
 							<div class="item">
-								<img src="images/slider/slide4.jpeg" alt="Third slide">
+								<img src="images/slider/slide4.jpeg" alt="Fourth slide">
+								<div class="carousel-caption">
+								</div>
+							</div>
+							<div class="item">
+								<img src="images/slider/slide5.jpeg" alt="Fifth slide">
 								<div class="carousel-caption">
 								</div>
 							</div>
